r600g: Fix use of uninitialized local variable extra_size.

Should fix http://bugs.freedesktop.org/show_bug.cgi?id=38566 .